--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "pathbuilder",
+    "name": "pf2e-cli",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -14,11 +14,14 @@
     "bin": "./index.js",
     "dependencies": {
         "axios": "^0.27.2",
+        "bluebird": "^3.7.2",
         "chalk": "^5.0.1",
         "figlet": "^1.5.2",
         "gradient-string": "^2.0.1",
-        "html-pdf-node": "^1.0.8",
+        "handlebars": "^4.7.7",
+        "inline-css": "^3.0.0",
         "inquirer": "^8.2.4",
-        "nanospinner": "^1.1.0"
+        "nanospinner": "^1.1.0",
+        "puppeteer": "^14.1.1"
     }
 }
