--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pf2ecli",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "",
     "main": "index.js",
     "type": "module",
@@ -18,6 +18,7 @@
         "figlet": "^1.5.2",
         "gradient-string": "^2.0.1",
         "inquirer": "^8.2.4",
-        "nanospinner": "^1.1.0"
+        "nanospinner": "^1.1.0",
+        "prince": "^1.9.6"
     }
 }
